# x2r-cli

./: README.md  pyproject.toml
x2r_cli/: cli.py
