[tool.poetry]
name = "x2r-cli"
version = "0.1.0"
description = ""
authors = ["Ming Yang <vivym@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "x2r_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
cookiecutter = "^2.1.1"

[tool.poetry.scripts]
x2r = "x2r_cli.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
